--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>ru.itis</groupId>
   <artifactId>simple-web-app</artifactId>
   <packaging>war</packaging>
-  <version>1.0</version>
+  <version>0.1</version>
   <name>simple-web-app Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -14,6 +14,32 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.4.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.28</version>
+      <scope>provided</scope>
+    </dependency>
+
+
+
+
   </dependencies>
   <build>
     <finalName>simple-web-app</finalName>
