--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,12 @@
       <version>1.18.28</version>
       <scope>provided</scope>
     </dependency>
-
-
-
+    <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
 
   </dependencies>
   <build>
